--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">X Is Alone</string>
     <string name="new_game">New Game</string>
+    <string name="options">Options</string>
+    <string name="alt_controls">\t Alternate Control Scheme</string>
 </resources>
