toggle controls option styled

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">X Is Alone</string>
     <string name="new_game">New Game</string>
     <string name="options">Options</string>
-    <string name="alt_controls">\t Alternate Control Scheme</string>
+    <string name="alt_controls">Alternate Controls</string>
+    <string name="alt_controls_description">Based on the center of the screen</string>
 </resources>
